--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,4 @@ jobs:
       run: kubectl apply -f $GITHUB_WORKSPACE/deployment.yml
 
     - name: Verify deployment
-      run: kubectl rollout status deployment/myqtab-keycloak
+      run: kubectl rollout status deployment/keycloak
